--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   The blog site of Rasmus Källqvist, where he writes about programing and mathematics.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+markdown: kramdown
+highlighter: rouge
+input: GFM
 
 # Build settings
 # theme: minima
