--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,10 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
+markdown: kramdown
+highlighter: rouge
+input: GFM
+
 # Build settings
 # theme: minima
 # plugins:
